tests/snapshots/run_file__def_num_bool.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/def_num_bool.hvm
---
Lazy mode:
Errors:
In definition 'go':
  Non-exhaustive pattern matching rule. Default case of number type not covered.


Strict mode:
Errors:
In definition 'go':
  Non-exhaustive pattern matching rule. Default case of number type not covered.
