tests/snapshots/run_file__linearize_match.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/linearize_match.hvm
---
Lazy mode:
λa switch a { 0: λb b; _: λd (+ a-1 d) }

Strict mode:
λa switch a { 0: λb b; _: λd (+ a-1 d) }
