tests/snapshots/run_file__match_mult_linearization.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/match_mult_linearization.hvm
---
Lazy mode:
λa switch a { 0: λb λc λd (+ (+ b c) d); _: λf λg λh (+ (+ (+ a-1 f) g) h) }

Strict mode:
λa switch a { 0: λb λc λd (+ (+ b c) d); _: λf λg λh (+ (+ (+ a-1 f) g) h) }
