tests/snapshots/run_file__num_match_missing_var.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/num_match_missing_var.hvm
---
Lazy mode:
Errors:
In definition 'if2':
  Extra arms in 'switch' expression. No rules should come after the default.
In definition 'if3':
  Extra arms in 'switch' expression. No rules should come after the default.


Strict mode:
Errors:
In definition 'if2':
  Extra arms in 'switch' expression. No rules should come after the default.
In definition 'if3':
  Extra arms in 'switch' expression. No rules should come after the default.
